removing use of Map.of()